--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -8,7 +8,7 @@
       position: relative;
       max-width: 768px;
       height: 360;
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-image: url(../images/p1_s1_c.png);
       background-position: center bottom;
       background-size: auto;
@@ -40,7 +40,7 @@
       position: relative;
       max-width: 768px;
       height: 332px;
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-image: url(../images/p1_s2_a.png);
       background-position: center top;
       background-size: auto;
@@ -73,7 +73,7 @@
       position: relative;
       max-width: 768px;
       height: 332px;
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-image: url(../images/p1_s3_a.png);
       background-position: center top;
       background-size: auto;
@@ -106,7 +106,7 @@
       position: relative;
       max-width: 768px;
       height: 332px;
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-image: url(../images/p1_s4_a.png);
       background-position: center top;
       background-size: auto;
@@ -139,7 +139,7 @@
       position: relative;
       max-width: 768px;
       height: 332px;
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-image: url(../images/p1_s5_a.png);
       background-position: center top;
       background-size: auto;
