--- a/app/styles/professionals.scss
+++ b/app/styles/professionals.scss
@@ -31,7 +31,7 @@
     }
 
     .head {
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-color: #f3f5f2;
     }
   }
@@ -48,7 +48,7 @@
     }
 
     .head {
-      padding: 0.1px 0;
+      padding: 1px 0;
       background-color: #c4cbd8;
     }
 
