--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -66,9 +66,32 @@ input, textarea {
   -o-border-radius: 5px;
   border-radius: 5px; }
 
+#dialog-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 11; }
+
+.dialog {
+  max-width: 390px;
+  height: 1000px;
+  margin: 90px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px; }
+
 .container {
   max-width: 960px;
-  padding: 0.1px 20px;
+  padding: 1px 20px;
   margin: 0 auto; }
   .container .row {
     margin-left: -10px;
@@ -190,6 +213,9 @@ input, textarea {
   display: table-cell;
   vertical-align: middle; }
 
+.opened-dialog {
+  overflow: hidden; }
+
 .bg-color {
   background-color: #f3f5f2 !important; }
 
@@ -302,7 +328,7 @@ input, textarea {
     position: relative;
     max-width: 768px;
     height: 360;
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-image: url(../images/p1_s1_c.png);
     background-position: center bottom;
     background-size: auto;
@@ -328,7 +354,7 @@ input, textarea {
     position: relative;
     max-width: 768px;
     height: 332px;
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-image: url(../images/p1_s2_a.png);
     background-position: center top;
     background-size: auto;
@@ -358,7 +384,7 @@ input, textarea {
     position: relative;
     max-width: 768px;
     height: 332px;
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-image: url(../images/p1_s3_a.png);
     background-position: center top;
     background-size: auto;
@@ -388,7 +414,7 @@ input, textarea {
     position: relative;
     max-width: 768px;
     height: 332px;
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-image: url(../images/p1_s4_a.png);
     background-position: center top;
     background-size: auto;
@@ -418,7 +444,7 @@ input, textarea {
     position: relative;
     max-width: 768px;
     height: 332px;
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-image: url(../images/p1_s5_a.png);
     background-position: center top;
     background-size: auto;
@@ -621,7 +647,7 @@ input, textarea {
       min-height: 0;
       margin-left: 0; } }
   .professionals-section-11 .price-panel-basic .head {
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-color: #f3f5f2; }
 .professionals-section-11 .price-panel-paid {
   position: relative;
@@ -634,7 +660,7 @@ input, textarea {
       min-height: 0;
       margin-right: 0; } }
   .professionals-section-11 .price-panel-paid .head {
-    padding: 0.1px 0;
+    padding: 1px 0;
     background-color: #c4cbd8; }
   .professionals-section-11 .price-panel-paid .btn-color {
     background-color: #57a6fd; }
